# pingvoice-desktop

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  tauri.conf.json
.claude/skills/release/: SKILL.md
.github/workflows/: build.yml
capabilities/: default.json
docs/: mac-app-store-release.md  mac-testing-guide.md  notarized-distribution.md
icons/: icon.icns
src/: config.rs  lib.rs  main.rs  tray.rs
